# Webcheckfuel

./: .pre-commit-config.yaml  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Webcheckfuel/: asgi.py  settings.py  urls.py  wsgi.py
Webcheckfuel/apps/account/: apps.py  forms.py  urls.py  views.py
Webcheckfuel/apps/account/templates/account/: notauth.html
Webcheckfuel/apps/account/templates/registration/: login.html
Webcheckfuel/apps/main/: apps.py  urls.py  views.py
Webcheckfuel/apps/main/templates/main/: about.html  pattern.html
Webcheckfuel/apps/masscalc/: admin.py  apps.py  calc.py  models.py  utils.py  views.py
Webcheckfuel/apps/masscalc/migrations/: 0001_initial.py
Webcheckfuel/apps/parsing/: admin.py  apps.py  main.py  models.py  parsexml.py  scanfiles.py  urls.py  views.py
Webcheckfuel/apps/parsing/migrations/: 0001_initial.py  0002_auto_20210621_2046.py  0003_auto_20210624_2024.py  0004_alter_sector_train.py
Webcheckfuel/apps/parsing/templates/parsing/: index.html
apps/account/: forms.py  urls.py
apps/main/: urls.py
apps/main/templates/main/: home.html  pattern.html
apps/masscalc/: apps.py
apps/parsing/: admin.py  apps.py  forms.py  main.py  models.py  scanfiles.py  urls.py  views.py
apps/parsing/migrations/: 0002_auto_20210621_2046.py  0005_uploadedfile.py  0006_alter_train_locomotive.py
apps/parsing/templates/parsing/: upload_file_form.html
static/parsing/css/: upload_file_form.css
static/parsing/js/: upload_file_form.js
